# SINS

./: .gitmodules  .travis.yml  CMakeLists.txt  appveyor.yml  readme.md
cmake/: Config.cmake  Macros.cmake  SFMLConfigDependencies.cmake.in
cmake/Modules/: FindBGFX.cmake
examples/: CMakeLists.txt
examples/cocoa/: CocoaAppDelegate.mm
examples/emscripten/: CMakeLists.txt  Emscripten.cpp
examples/iOS/: main.cpp
examples/island/: CMakeLists.txt  Island.cpp
examples/island/resources/: terrain.frag.sc  terrain.vert.sc  varying.def.sc
examples/joystick/: CMakeLists.txt  Joystick.cpp
examples/opengl/: CMakeLists.txt  OpenGL.cpp
examples/pong/: CMakeLists.txt  Pong.cpp
examples/shader/: CMakeLists.txt  Effect.hpp  Shader.cpp
examples/shader/resources/: blink.frag.sc  blur.frag.sc  edge.frag.sc  pixelate.sc  storm.vert.sc  wave.vert.sc
examples/sound/: Sound.cpp
examples/sound_capture/: SoundCapture.cpp
examples/voip/: Server.cpp
examples/window/: CMakeLists.txt  Window.cpp
include/SFML/: Compatibility.hpp  Config.hpp  System.hpp  Window.hpp
include/SFML/Audio/: InputSoundFile.hpp  Music.hpp  OutputSoundFile.hpp  Sound.hpp  SoundBufferRecorder.hpp  SoundFileFactory.hpp  SoundFileFactory.inl  SoundRecorder.hpp  SoundSource.hpp  SoundStream.hpp
include/SFML/Graphics/: BlendMode.hpp  CircleShape.hpp  ConvexShape.hpp  Font.hpp  Glyph.hpp  Image.hpp  PrimitiveType.hpp  RectangleShape.hpp  RenderTarget.hpp  RenderTexture.hpp  RenderWindow.hpp  Shader.hpp  Shape.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Transform.hpp  Transformable.hpp  VertexArray.hpp  VertexBuffer.hpp  View.hpp
include/SFML/Network/: Ftp.hpp  Http.hpp  Packet.hpp  Socket.hpp  SocketSelector.hpp
include/SFML/System/: Err.hpp  FileInputStream.hpp  MemoryInputStream.hpp  NonCopyable.hpp  Time.hpp
include/SFML/Window/: Context.hpp  ContextSettings.hpp  Event.hpp  Joystick.hpp  Keyboard.hpp  Mouse.hpp  Sensor.hpp  Window.hpp  WindowHandle.hpp
src/SFML/: CMakeLists.txt
src/SFML/Audio/: ALCheck.hpp  AlResource.cpp  AudioDevice.cpp  CMakeLists.txt  InputSoundFile.cpp  Music.cpp  OutputSoundFile.cpp  Sound.cpp  SoundBuffer.cpp  SoundBufferRecorder.cpp  SoundFileFactory.cpp  SoundFileReaderFlac.cpp  SoundFileReaderFlac.hpp  SoundFileReaderOgg.cpp  SoundFileReaderOgg.hpp  SoundFileReaderWav.cpp  SoundFileReaderWav.hpp  SoundFileWriterFlac.cpp  SoundFileWriterFlac.hpp  SoundFileWriterOgg.cpp  SoundFileWriterOgg.hpp  SoundFileWriterWav.hpp  SoundRecorder.cpp  SoundSource.cpp  SoundStream.cpp
src/SFML/Graphics/: BlendMode.cpp  CMakeLists.txt  CircleShape.cpp  Font.cpp  GLExtensions.cpp  GLLoader.cpp  Image.cpp  ImageLoader.cpp  RenderStates.cpp  RenderTarget.cpp  RenderTexture.cpp  RenderTextureImplDefault.cpp  RenderTextureImplDefault.hpp  RenderTextureImplFBO.cpp  RenderTextureImplFBO.hpp  RenderWindow.cpp  Shader.cpp  Shape.cpp  Sprite.cpp  Text.cpp  Texture.cpp  Transform.cpp  Transformable.cpp  VertexArray.cpp  VertexBuffer.cpp  View.cpp
src/SFML/Main/: MainAndroid.cpp
src/SFML/Network/: Ftp.cpp  Http.cpp  IpAddress.cpp  Packet.cpp  Socket.cpp  SocketSelector.cpp  TcpListener.cpp  TcpSocket.cpp  UdpSocket.cpp
src/SFML/Network/Unix/: SocketImpl.cpp
src/SFML/Network/Win32/: SocketImpl.cpp
src/SFML/System/: CMakeLists.txt  Clock.cpp  Err.cpp  FileInputStream.cpp  MemoryInputStream.cpp  Sleep.cpp  Time.cpp
src/SFML/System/Android/: Activity.cpp  Activity.hpp
src/SFML/Window/: CMakeLists.txt  Context.cpp  CursorImpl.hpp  EglContext.cpp  GlContext.cpp  GlContext.hpp  InputImpl.hpp  Joystick.cpp  JoystickImpl.hpp  SensorImpl.hpp  SensorManager.cpp  SensorManager.hpp  VideoMode.cpp  Window.cpp  WindowImpl.cpp  WindowImpl.hpp
src/SFML/Window/Android/: InputImpl.cpp  SensorImpl.cpp  SensorImpl.hpp  VideoModeImpl.cpp  WindowImplAndroid.cpp  WindowImplAndroid.hpp
src/SFML/Window/Emscripten/: ClipboardImpl.cpp  ClipboardImpl.hpp  CursorImpl.cpp  CursorImpl.hpp  InputImpl.cpp  InputImpl.hpp  JoystickImpl.cpp  JoystickImpl.hpp  SensorImpl.hpp  VideoModeImpl.cpp  WindowImplEmscripten.cpp  WindowImplEmscripten.hpp
src/SFML/Window/FreeBSD/: JoystickImpl.cpp
src/SFML/Window/OSX/: AutoreleasePoolWrapper.mm  HIDInputManager.hpp  HIDInputManager.mm  HIDJoystickManager.cpp  HIDJoystickManager.hpp  InputImpl.mm  JoystickImpl.cpp  SFContext.hpp  SFContext.mm  SFKeyboardModifiersHelper.mm  SFOpenGLView+keyboard.mm  SFOpenGLView+mouse.mm  SFView+keyboard.mm  SFView+keyboard_priv.h  SFView+mouse.mm  SFView+mouse_priv.h  SFView.h  SFView.mm  SFViewController.h  SFViewController.mm  SFWindowController.h  SFWindowController.mm  VideoModeImpl.cpp  WindowImplCocoa.hpp  WindowImplCocoa.mm  WindowImplDelegateProtocol.h
src/SFML/Window/Unix/: Display.cpp  GlxContext.cpp  GlxContext.hpp  GlxExtensions.cpp  InputImpl.cpp  JoystickImpl.cpp  WindowImplX11.cpp  WindowImplX11.hpp
src/SFML/Window/Win32/: InputImpl.cpp  JoystickImpl.cpp  JoystickImpl.hpp  VideoModeImpl.cpp  WglContext.cpp  WglContext.hpp  WglExtensions.cpp  WindowImplWin32.cpp  WindowImplWin32.hpp
src/SFML/Window/iOS/: EaglContext.hpp  SFAppDelegate.mm  SFView.hpp  SFView.mm  SensorImpl.mm  WindowImplUIKit.hpp  WindowImplUIKit.mm
tools/xcode/templates/SFML/SFML Compiler.xctemplate/: TemplateInfo.plist.in
