
# iOS Demo
if(SFML_OS_IOS)
    add_subdirectory(iOS)
else(SFML_OS_IOS)

    # add the examples subdirectories
    if(SFML_BUILD_NETWORK)
        add_subdirectory(ftp)
        add_subdirectory(sockets)
    endif()
    if(SFML_BUILD_NETWORK AND SFML_BUILD_AUDIO)
        add_subdirectory(voip)
    endif()
    if(SFML_BUILD_AUDIO)
        add_subdirectory(sound)
        add_subdirectory(sound_capture)
    endif()
    if(SFML_BUILD_WINDOW)
        add_subdirectory(window)
    endif()
    if(SFML_BUILD_GRAPHICS)
        add_subdirectory(joystick)
        add_subdirectory(shader)
        add_subdirectory(island)
    endif()
    if(SFML_BUILD_GRAPHICS AND SFML_BUILD_AUDIO)
        add_subdirectory(pong)
    endif()
endif(SFML_OS_IOS)
